Updated (fixed error).

--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -1,18 +1,18 @@
 ---
-  title: "Introduction to MultiCorrSurvBinary"
+title: "Introduction to MultiCorrSurvBinary"
 author: "Gosuke Homma"
 date: "`r Sys.Date()`"
 output: 
   rmarkdown::html_vignette:
-  toc: true
-toc_depth: 2
+    toc: true
+    toc_depth: 2
 vignette: >
   %\VignetteIndexEntry{Introduction to MultiCorrSurvBinary}
-%\VignetteEngine{knitr::rmarkdown}
-%\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
-  
-  ```{r setup, include = FALSE}
+
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -24,8 +24,8 @@ knitr::opts_chunk$set(
 ## Overview
 
 The `MultiCorrSurvBinary` package provides comprehensive tools for generating correlated time-to-event and binary outcomes in clinical trial simulations. This package is particularly useful for:
-  
-  - Simulating correlated clinical trial endpoints
+
+- Simulating correlated clinical trial endpoints
 - Validating correlation structures using Fréchet-Hoeffding bounds
 - Performing event-driven analyses with proper statistical testing
 - Handling multiple treatment arms and subgroups
@@ -35,16 +35,16 @@ The `MultiCorrSurvBinary` package provides comprehensive tools for generating co
 ### Outcomes Supported
 
 The package supports three types of clinical trial outcomes:
-  
-  1. **OS (Overall Survival)**: Time-to-event outcome following exponential distribution
+
+1. **OS (Overall Survival)**: Time-to-event outcome following exponential distribution
 2. **PFS (Progression-Free Survival)**: Time-to-event outcome following exponential distribution  
 3. **OR (Objective Response)**: Binary outcome following Bernoulli distribution
 
 ### Correlation Structure
 
 Correlations between outcomes are modeled using:
-  
-  - **Normal copula** for generating correlated random variables
+
+- **Normal copula** for generating correlated random variables
 - **Fréchet-Hoeffding bounds** for validating feasible correlation ranges
 - **Analytical integration** for precise bound calculations
 
@@ -64,8 +64,8 @@ library(dplyr)
 ### Single Population Simulation
 
 Generate correlated outcomes for a single population:
-  
-  ```{r single-pop}
+
+```{r single-pop}
 # Generate correlated OS, PFS, and OR for single population
 result_single <- rCorrSurvBinary(
   nsim = 10,
@@ -78,7 +78,8 @@ result_single <- rCorrSurvBinary(
   rho.OS.OR = 0.3,  # Correlation between OS and OR
   rho.PFS.OR = 0.4, # Correlation between PFS and OR
   tau = 24,         # 24-year accrual period
-  seed = 123
+  seed = 123,
+  validate.bounds = FALSE  # Skip validation for demo speed
 )
 
 # View first few rows
@@ -88,8 +89,8 @@ head(result_single)
 ### Correlation Bounds Validation
 
 Validate that correlation parameters are within feasible bounds:
-  
-  ```{r bounds}
+
+```{r bounds}
 # Check correlation bounds
 bounds_check <- CorrBounds(
   outcomes = c('OS', 'PFS', 'OR'),
@@ -122,16 +123,16 @@ for (bound_name in names(bounds_check$bounds)) {
 ### Multiple Arms Simulation
 
 Generate data for multiple treatment arms:
-  
-  ```{r multi-arm}
+
+```{r multi-arm}
 # Define parameters for two treatment arms
 arm_params <- list(
   arm1 = list(
-    mst.OS = 18, mst.PFS = 12, p.OR = 0.6, n = 150,
+    mst.OS = 18, mst.PFS = 12, p.OR = 0.6, n = 100,
     rho.OS.PFS = 0.5, rho.OS.OR = 0.3, rho.PFS.OR = 0.4
   ),
   arm2 = list(
-    mst.OS = 12, mst.PFS = 8, p.OR = 0.4, n = 150,
+    mst.OS = 12, mst.PFS = 8, p.OR = 0.4, n = 100,
     rho.OS.PFS = 0.5, rho.OS.OR = 0.3, rho.PFS.OR = 0.4
   )
 )
@@ -142,7 +143,8 @@ result_multi <- rCorrSurvBinaryMultiArmSubgroup(
   outcomes = c('OS', 'PFS', 'OR'),
   arm.params = arm_params,
   tau = 24,
-  seed = 456
+  seed = 456,
+  validate.bounds = FALSE  # Skip validation for demo speed
 )
 
 # Summary by arm
@@ -162,27 +164,27 @@ result_multi %>%
 ### Subgroup Analysis
 
 The package supports complex subgroup structures:
-  
-  ```{r subgroups}
+
+```{r subgroups}
 # Define parameters with subgroups
 arm_params_subgroups <- list(
   arm1 = list(
     sub1 = list(
-      mst.OS = 20, mst.PFS = 12, p.OR = 0.7, n = 100,
+      mst.OS = 20, mst.PFS = 12, p.OR = 0.7, n = 50,
       rho.OS.PFS = 0.4, rho.OS.OR = 0.2, rho.PFS.OR = 0.3
     ),
     sub2 = list(
-      mst.OS = 15, mst.PFS = 8, p.OR = 0.5, n = 50,
+      mst.OS = 15, mst.PFS = 8, p.OR = 0.5, n = 25,
       rho.OS.PFS = 0.4, rho.OS.OR = 0.2, rho.PFS.OR = 0.3
     )
   ),
   arm2 = list(
     sub1 = list(
-      mst.OS = 12, mst.PFS = 6, p.OR = 0.4, n = 100,
+      mst.OS = 12, mst.PFS = 6, p.OR = 0.4, n = 50,
       rho.OS.PFS = 0.4, rho.OS.OR = 0.2, rho.PFS.OR = 0.3
     ),
     sub2 = list(
-      mst.OS = 10, mst.PFS = 5, p.OR = 0.3, n = 50,
+      mst.OS = 10, mst.PFS = 5, p.OR = 0.3, n = 25,
       rho.OS.PFS = 0.4, rho.OS.OR = 0.2, rho.PFS.OR = 0.3
     )
   )
@@ -194,7 +196,8 @@ result_subgroups <- rCorrSurvBinaryMultiArmSubgroup(
   outcomes = c('OS', 'PFS', 'OR'),
   arm.params = arm_params_subgroups,
   tau = 18,
-  seed = 789
+  seed = 789,
+  validate.bounds = FALSE
 )
 
 # Summary by arm and subgroup
@@ -212,26 +215,30 @@ result_subgroups %>%
 ### Event-Driven Analysis
 
 Perform sequential analyses at predefined event numbers:
-  
-  ```{r event-driven}
+
+```{r event-driven}
 # Perform event-driven analysis
 analysis_results <- AnalysisCorrSurvBinary(
   data = result_multi,
-  E = c(25, 50, 75),  # Event numbers for analysis
+  E = c(15, 30, 45),  # Event numbers for analysis
   prioritize = "OS",
   subgroup.prioritize = c("entire"),
   alternative = "greater"
 )
 
 # Summary of analysis results
-analysis_results %>%
-  group_by(analysis_event, outcome) %>%
-  summarise(
-    n_tests = n(),
-    significant_tests = sum(pvalue < 0.05, na.rm = TRUE),
-    mean_analysis_time = round(mean(analysis_time, na.rm = TRUE), 2),
-    .groups = 'drop'
-  )
+if (nrow(analysis_results) > 0) {
+  analysis_results %>%
+    group_by(analysis_event, outcome) %>%
+    summarise(
+      n_tests = n(),
+      significant_tests = sum(pvalue < 0.05, na.rm = TRUE),
+      mean_analysis_time = round(mean(analysis_time, na.rm = TRUE), 2),
+      .groups = 'drop'
+    )
+} else {
+  cat("No analysis results generated (insufficient events)\n")
+}
 ```
 
 ## Key Functions Summary
@@ -249,5 +256,6 @@ analysis_results %>%
 3. **Set seeds** for reproducible results
 4. **Consider biological constraints** when specifying correlation parameters
 5. **Test with small nsim** first before scaling up simulations
+6. **Use validate.bounds = FALSE** for large simulations after initial validation
 
 For more detailed examples and advanced usage, see the `examples` vignette.
