--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -28,7 +28,6 @@ This vignette provides comprehensive examples of using the `MultiCorrSurvBinary`
 ```{r load-packages}
 library(MultiCorrSurvBinary)
 library(dplyr)
-library(ggplot2)
 ```
 
 ## Example 1: Oncology Phase II Trial
@@ -41,7 +40,7 @@ set.seed(2024)
 
 # Generate single-arm data
 phase2_data <- rCorrSurvBinary(
-  nsim = 100,
+  nsim = 50,  # Reduced for vignette speed
   outcomes = c('OS', 'PFS', 'OR'),
   n = 80,
   mst.OS = 15,      # 15-month median OS
@@ -51,7 +50,8 @@ phase2_data <- rCorrSurvBinary(
   rho.OS.OR = 0.4,  # Moderate correlation OS-response
   rho.PFS.OR = 0.5, # Moderate correlation PFS-response
   tau = 18,         # 18-month accrual
-  seed = 123
+  seed = 123,
+  validate.bounds = FALSE  # Skip validation for speed
 )
 
 # Summary statistics
@@ -77,22 +77,23 @@ Simulate a two-arm randomized controlled trial.
 # Define RCT parameters
 rct_params <- list(
   experimental = list(
-    mst.OS = 24, mst.PFS = 12, p.OR = 0.5, n = 200,
+    mst.OS = 24, mst.PFS = 12, p.OR = 0.5, n = 100,
     rho.OS.PFS = 0.7, rho.OS.OR = 0.3, rho.PFS.OR = 0.4
   ),
   control = list(
-    mst.OS = 18, mst.PFS = 9, p.OR = 0.3, n = 200,
+    mst.OS = 18, mst.PFS = 9, p.OR = 0.3, n = 100,
     rho.OS.PFS = 0.7, rho.OS.OR = 0.3, rho.PFS.OR = 0.4
   )
 )
 
 # Generate RCT data
 rct_data <- rCorrSurvBinaryMultiArmSubgroup(
-  nsim = 200,
+  nsim = 50,  # Reduced for vignette speed
   outcomes = c('OS', 'PFS', 'OR'),
   arm.params = rct_params,
   tau = 36,
-  seed = 456
+  seed = 456,
+  validate.bounds = FALSE
 )
 
 # Compare arms
@@ -118,21 +119,21 @@ Simulate a trial with biomarker-defined subgroups.
 biomarker_params <- list(
   treatment = list(
     biomarker_positive = list(
-      mst.OS = 30, mst.PFS = 18, p.OR = 0.7, n = 120,
+      mst.OS = 30, mst.PFS = 18, p.OR = 0.7, n = 60,
       rho.OS.PFS = 0.6, rho.OS.OR = 0.4, rho.PFS.OR = 0.5
     ),
     biomarker_negative = list(
-      mst.OS = 20, mst.PFS = 10, p.OR = 0.4, n = 80,
+      mst.OS = 20, mst.PFS = 10, p.OR = 0.4, n = 40,
       rho.OS.PFS = 0.6, rho.OS.OR = 0.4, rho.PFS.OR = 0.5
     )
   ),
   control = list(
     biomarker_positive = list(
-      mst.OS = 22, mst.PFS = 12, p.OR = 0.4, n = 120,
+      mst.OS = 22, mst.PFS = 12, p.OR = 0.4, n = 60,
       rho.OS.PFS = 0.6, rho.OS.OR = 0.4, rho.PFS.OR = 0.5
     ),
     biomarker_negative = list(
-      mst.OS = 18, mst.PFS = 8, p.OR = 0.25, n = 80,
+      mst.OS = 18, mst.PFS = 8, p.OR = 0.25, n = 40,
       rho.OS.PFS = 0.6, rho.OS.OR = 0.4, rho.PFS.OR = 0.5
     )
   )
@@ -140,11 +141,12 @@ biomarker_params <- list(
 
 # Generate biomarker-stratified data
 biomarker_data <- rCorrSurvBinaryMultiArmSubgroup(
-  nsim = 100,
+  nsim = 20,  # Reduced for vignette speed
   outcomes = c('OS', 'PFS', 'OR'),
   arm.params = biomarker_params,
   tau = 24,
-  seed = 789
+  seed = 789,
+  validate.bounds = FALSE
 )
 
 # Analyze by biomarker status
@@ -169,24 +171,28 @@ Perform interim and final analyses based on event counts.
 # Use the RCT data for event-driven analysis
 event_analysis <- AnalysisCorrSurvBinary(
   data = rct_data,
-  E = c(50, 100, 150),  # Interim analyses at 50, 100, final at 150 events
+  E = c(25, 50, 75),  # Interim analyses
   prioritize = "OS",
   subgroup.prioritize = c("entire"),
   alternative = "greater"
 )
 
 # Summarize results by analysis timepoint
-event_summary <- event_analysis %>%
-  group_by(analysis_event, outcome) %>%
-  summarise(
-    n_comparisons = n(),
-    mean_analysis_time_months = round(mean(analysis_time) * 12, 1),
-    significant_tests = sum(pvalue < 0.05, na.rm = TRUE),
-    power = round(mean(pvalue < 0.05, na.rm = TRUE), 3),
-    .groups = 'drop'
-  )
-
-print(event_summary)
+if (nrow(event_analysis) > 0) {
+  event_summary <- event_analysis %>%
+    group_by(analysis_event, outcome) %>%
+    summarise(
+      n_comparisons = n(),
+      mean_analysis_time_months = round(mean(analysis_time) * 12, 1),
+      significant_tests = sum(pvalue < 0.05, na.rm = TRUE),
+      power = round(mean(pvalue < 0.05, na.rm = TRUE), 3),
+      .groups = 'drop'
+    )
+  
+  print(event_summary)
+} else {
+  cat("No analysis results generated (insufficient events)\n")
+}
 ```
 
 ## Example 5: Correlation Bounds Exploration
@@ -210,93 +216,40 @@ explore_bounds <- function(mst_os, mst_pfs, p_or) {
     mst_OS = mst_os,
     mst_PFS = mst_pfs,
     p_OR = p_or,
-    OS_PFS_lower = bounds$bounds$OS.PFS$lower,
-    OS_PFS_upper = bounds$bounds$OS.PFS$upper,
-    OS_OR_lower = bounds$bounds$OS.OR$lower,
-    OS_OR_upper = bounds$bounds$OS.OR$upper,
-    PFS_OR_lower = bounds$bounds$PFS.OR$lower,
-    PFS_OR_upper = bounds$bounds$PFS.OR$upper
+    OS_PFS_lower = round(bounds$bounds$OS.PFS$lower, 3),
+    OS_PFS_upper = round(bounds$bounds$OS.PFS$upper, 3),
+    OS_OR_lower = round(bounds$bounds$OS.OR$lower, 3),
+    OS_OR_upper = round(bounds$bounds$OS.OR$upper, 3),
+    PFS_OR_lower = round(bounds$bounds$PFS.OR$lower, 3),
+    PFS_OR_upper = round(bounds$bounds$PFS.OR$upper, 3)
   )
 }
 
 # Explore different parameter combinations
-param_grid <- expand.grid(
+param_combinations <- data.frame(
   mst_os = c(12, 18, 24),
   mst_pfs = c(6, 9, 12),
   p_or = c(0.3, 0.5, 0.7)
 )
 
-bounds_results <- do.call(rbind, lapply(1:nrow(param_grid), function(i) {
-  explore_bounds(param_grid$mst_os[i], param_grid$mst_pfs[i], param_grid$p_or[i])
+bounds_results <- do.call(rbind, lapply(1:nrow(param_combinations), function(i) {
+  explore_bounds(param_combinations$mst_os[i], 
+                param_combinations$mst_pfs[i], 
+                param_combinations$p_or[i])
 }))
 
 # Display bounds for different scenarios
-print(head(bounds_results, 10))
+print(bounds_results)
 ```
 
-## Example 6: Sample Size and Power Considerations
-
-Demonstrate how correlation affects power in different scenarios.
-
-```{r power-analysis}
-# Function to simulate power for different correlation scenarios
-simulate_power <- function(rho_os_pfs, n_per_arm = 100, nsim = 500) {
-  # Generate data with specified correlation
-  power_params <- list(
-    treatment = list(
-      mst.OS = 20, mst.PFS = 12, p.OR = 0.5, n = n_per_arm,
-      rho.OS.PFS = rho_os_pfs, rho.OS.OR = 0.3, rho.PFS.OR = 0.4
-    ),
-    control = list(
-      mst.OS = 15, mst.PFS = 8, p.OR = 0.3, n = n_per_arm,
-      rho.OS.PFS = rho_os_pfs, rho.OS.OR = 0.3, rho.PFS.OR = 0.4
-    )
-  )
-  
-  sim_data <- rCorrSurvBinaryMultiArmSubgroup(
-    nsim = nsim,
-    outcomes = c('OS', 'PFS', 'OR'),
-    arm.params = power_params,
-    tau = 24,
-    seed = 123
-  )
-  
-  # Perform analysis
-  analysis <- AnalysisCorrSurvBinary(
-    data = sim_data,
-    E = c(80),  # Single analysis at 80 events
-    prioritize = "OS",
-    subgroup.prioritize = c("entire"),
-    alternative = "greater"
-  )
-  
-  # Calculate power
-  power_results <- analysis %>%
-    group_by(outcome) %>%
-    summarise(
-      power = mean(pvalue < 0.05, na.rm = TRUE),
-      .groups = 'drop'
-    ) %>%
-    mutate(correlation = rho_os_pfs)
-  
-  return(power_results)
-}
-
-# Compare power across different correlation levels
-correlation_levels <- c(0.3, 0.5, 0.7)
-power_comparison <- do.call(rbind, lapply(correlation_levels, simulate_power))
-
-print(power_comparison)
-```
-
-## Example 7: Validation and Diagnostics
+## Example 6: Validation and Diagnostics
 
 Validate simulation results and perform diagnostic checks.
 
 ```{r validation}
 # Generate validation data
 validation_data <- rCorrSurvBinary(
-  nsim = 1000,
+  nsim = 100,  # Reduced for vignette
   outcomes = c('OS', 'PFS', 'OR'),
   n = 200,
   mst.OS = 18,
@@ -306,7 +259,8 @@ validation_data <- rCorrSurvBinary(
   rho.OS.OR = 0.3,
   rho.PFS.OR = 0.4,
   tau = 24,
-  seed = 2024
+  seed = 2024,
+  validate.bounds = FALSE
 )
 
 # Check marginal distributions
@@ -314,20 +268,20 @@ marginal_check <- validation_data %>%
   summarise(
     # OS exponential check
     theoretical_median_OS = 18,
-    empirical_median_OS = median(OS),
+    empirical_median_OS = round(median(OS), 2),
     # PFS exponential check  
     theoretical_median_PFS = 10,
-    empirical_median_PFS = median(PFS),
+    empirical_median_PFS = round(median(PFS), 2),
     # OR Bernoulli check
     theoretical_response_rate = 0.4,
-    empirical_response_rate = mean(OR),
+    empirical_response_rate = round(mean(OR), 3),
     # Correlation checks
     theoretical_cor_OS_PFS = 0.6,
-    empirical_cor_OS_PFS = cor(OS, PFS),
+    empirical_cor_OS_PFS = round(cor(OS, PFS), 3),
     theoretical_cor_OS_OR = 0.3,
-    empirical_cor_OS_OR = cor(OS, OR),
+    empirical_cor_OS_OR = round(cor(OS, OR), 3),
     theoretical_cor_PFS_OR = 0.4,
-    empirical_cor_PFS_OR = cor(PFS, OR)
+    empirical_cor_PFS_OR = round(cor(PFS, OR), 3)
   )
 
 print(marginal_check)
@@ -337,7 +291,7 @@ constraint_check <- validation_data %>%
   summarise(
     violations = sum(OS < PFS),
     total_observations = n(),
-    violation_rate = mean(OS < PFS)
+    violation_rate = round(mean(OS < PFS), 4)
   )
 
 print(constraint_check)
@@ -358,7 +312,7 @@ print(constraint_check)
 ### 3. Simulation Efficiency
 - Start with small `nsim` for testing
 - Use seeds for reproducibility
-- Consider parallel processing for large simulations
+- Set `validate.bounds = FALSE` for large simulations after initial validation
 
 ### 4. Validation
 - Check marginal distributions match specifications
